hphp/hack/test/package_v2/package_access/illegal_cross_package_basic.php.exp
error: Typing[4472] Cannot access an element which belongs to package pkg2 from package pkg1 [1]
-> This is from illegal_cross_package_basic.php--illegal_cross_package_basic_foo.php, which belongs to package pkg2 [2]
-> But illegal_cross_package_basic.php--bar.php is in package pkg1, and package pkg1 does not include package pkg2 [3]

illegal_cross_package_basic.php--bar.php:5:13
    3 | module bar;
    4 | 
[1] 5 | type TBar = TFoo; // error
    6 | newtype NBar1 = TFoo; // ok
    7 | newtype NBar2 as TFoo = int; // ok

illegal_cross_package_basic.php--illegal_cross_package_basic_foo.php:3:6
    1 | <?hh
    2 | // package pkg2
[2] 3 | type TFoo = int;

PACKAGES.toml:3:11
    1 | [packages]
    2 | 
[3] 3 | [packages.pkg1]
    4 | include_paths=["//"]
    5 | 

1 error found
